Alignment fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -87,7 +87,7 @@ body {
   font-family: var(--font-heading);
   font-weight: 400;
   font-style: normal;
-  line-height: 88%;
+  line-height: 0.88;
   letter-spacing: -1%;
   text-transform: uppercase;
   color: #ffffff;
@@ -97,7 +97,7 @@ body {
   font-family: var(--font-from);
   font-weight: 300;
   font-style: normal;
-  line-height: 88%;
+  line-height: 0.88;
   letter-spacing: -1%;
   text-transform: uppercase;
   color: #ffffff;
@@ -107,7 +107,7 @@ body {
   font-family: var(--font-heading);
   font-weight: 400;
   font-style: normal;
-  line-height: 88%;
+  line-height: 0.88;
   letter-spacing: -1%;
   text-transform: uppercase;
   color: #ffffff;
